# esp32-core

./: .Makefile.mk  Makefile
.github/workflows/: lifesensor_ci.yml
components/channel/: Kconfig
components/channel/include/: channel.h  channel_debug.h
components/channel/src/: channel.c
components/channel/test/: queue_test.c
components/log_wifi/: CMakeLists.txt  Kconfig  README.md
components/log_wifi/include/: log_wifi.h
components/log_wifi/src/: log_wifi.c
components/log_wifi/test/: CMakeLists.txt  test.c
components/mp_queue/: CMakeLists.txt  Kconfig
components/mp_queue/include/: mp_queue.h
components/mp_queue/src/: mp_queue.c
docker/influx/: Dockerfile  influxdb.conf
include/: wifi-test.h  wifi.h
lifesensor_test/: Makefile
main/: CMakeLists.txt  main.c
parts/esp32-components/channel/: CMakeLists.txt
parts/esp32-components/channel/include/: channel.h  channel_consumer.h  channel_producer.h
parts/esp32-components/channel/src/: channel.c  channel_consumer.c  channel_producer.c  channel_root.c
parts/esp32-components/channel/test/: channel_test.c
src/: main.c  transmission.c  wifi-test.c
test/: CMakeLists.txt
test/main/: main.c
